contact spacing fix

--- a/styles/column.scss
+++ b/styles/column.scss
@@ -82,6 +82,7 @@
     width: 100%;
     display: flex;
     flex-direction: row-reverse;
+    justify-content: space-between;
 }
 
 .column-3.left {
